--- a/index.html
+++ b/index.html
@@ -214,7 +214,9 @@
     <!-- Header -->
     <header>
         <div class="menu-icon" onclick="toggleDropdown(event)">&#9776;</div>
-        <div class="logo">Azelic Technologies</div>
+        <div class="logo">
+            <img src="images/logo.png" alt="Azelic Technologies Logo">
+        </div>
         <div class="share-icon" onclick="toggleSocialMedia(event)">&#9733;</div>
     </header>
 
