--- a/index.html
+++ b/index.html
@@ -248,7 +248,7 @@
         <a href="https://www.facebook.com/sharer/sharer.php?u=https://azelictechnologies.github.io/Azelic_Technologies_Website/" target="_blank"><i class='bx bxl-facebook' style='color:#ffffff'></i></a>
         <a href="https://wa.me/?text=https://azelictechnologies.github.io/Azelic_Technologies_Website/" target="_blank"><i class='bx bxl-whatsapp' style='color:#ffffff' ></i></a>
         <a href="https://www.linkedin.com/shareArticle?mini=true&url=https://azelictechnologies.github.io/Azelic_Technologies_Website/" target=" _blank"><i class='bx bxl-linkedin' style='color:#ffffff' ></i></a>
-        <a href="https://www.instagram.com" target="_blank"><i class='bx bxl-instagram' style='color:#ffffff' ></i></a>
+        <a href="https://twitter.com/intent/tweet?url=https://azelictechnologies.github.io/Azelic_Technologies_Website/" target="_blank"><i class='bx bxl-twitter' style='color:#ffffff'></i></a>
         <a href="https://t.me/share/url?url=https://azelictechnologies.github.io/Azelic_Technologies_Website/" target="_blank"><i class='bx bxl-telegram' style='color:#ffffff'></i></a>
     </div>
 
