--- a/home.html
+++ b/home.html
@@ -1,9 +1,4 @@
-<!DOCTYPE html>
-<html lang="en">
-
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+<main>
     <style>
       .bbody {
           font-family: 'Times New Roman', serif; /* Changed to Times New Roman */
@@ -429,3 +424,4 @@
     </div>
   </div>
 </html>
+</main>
