--- a/index.html
+++ b/index.html
@@ -23,8 +23,8 @@
 
     <!-- Dropdown Menu -->
     <div id="dropdown" class="dropdown-menu">
-        <li><a href="#" onclick="loadPage('home')">Home</a></li>
-        <li><a href="#" onclick="loadPage('about.html')">About us</a></li>
+        <li><a href="home.html" onclick="loadPage('home')">Home</a></li>
+        <li><a href="about.html" onclick="loadPage('about.html')">About us</a></li>
         <a href="#services">Services</a>
         <a href="#products">Products</a>
         <a href="#contact">Contact Us</a>
