--- a/about.html
+++ b/about.html
@@ -2,6 +2,7 @@
     <link rel="stylesheet" href="css/about.css">
     <link href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.3/css/all.min.css" rel="stylesheet">
 </head>
+<main id="content">
 <div class="bbody">
 <div class="container">
     <div class="box-container">
@@ -131,3 +132,4 @@
     </div>
 </div>
 </div>
+</main>
