--- a/about.html
+++ b/about.html
@@ -1,5 +1,6 @@
 <head>
     <link rel="stylesheet" href="css/about.css">
+    <link rel="stylesheet" href="css/index.css">
     <link href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.3/css/all.min.css" rel="stylesheet">
 </head>
 <main>
@@ -132,4 +133,5 @@
     </div>
 </div>
 </div>
+<script src="index.html"></script>
 </main>
