--- a/about.html
+++ b/about.html
@@ -3,135 +3,87 @@
     <link rel="stylesheet" href="css/index.css">
     <link href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.3/css/all.min.css" rel="stylesheet">
 </head>
+
 <main>
-<div class="bbody">
-<div class="container">
-    <div class="box-container">
-        <div class="content">
-            <div class="text-section">
-                <h2>
-                    About<br/><span>US ?</span>
-                </h2>
-                <ul class="features">
-                    <li><i class="fas fa-check-circle"></i> Excellence Service </li>
-                    <li><i class="fas fa-check-circle"></i> Integrated Technology </li>
-                    <li><i class="fas fa-check-circle"></i> AI Usage </li>
-                </ul>
-                <p>
-                    Excellence in service, integrated technology, and the usage of artificial intelligence (AI) are the driving forces behind modern business success. Excellence in service ensures customer satisfaction by delivering quality experiences that go beyond expectations, fostering long-term loyalty. Integrated technology streamlines operations, enhances communication, and supports seamless collaboration across different platforms, making businesses more agile and efficient. AI, with its ability to process vast amounts of data, automate routine tasks, and provide insightful analytics, is revolutionizing industries by enabling more personalized and intelligent solutions, boosting both customer engagement and operational efficiency. Together, these elements create a powerful synergy that propels businesses into the future.
-                </p>
-            </div>
-            <div class="image-section">
-                <br><br><br>
-                <img src="images/about.png" /> <!-- Update path as needed -->
-                <div class="badge">
-                    <i class="fas fa-user-plus"></i>
-                    <div>
-                        <span>1K+</span>
-                        <p>Happy Clients</p>
-                    </div>
-                </div>
-            </div>
-            
-        </div>
-    </div>
-
-    <div class="b-box-container">
-        <div class="team-section">
-            <h3>Our Team</h3>
-
-            <div class="new-member-container">
-                <div class="new-member highlighted">
-                    <img src="https://via.placeholder.com/80" alt="New Member">
-                    <div>
-                        <h4>New Member</h4>
-                        <p>Role</p>
-                        <p class="description">
-                            Brief description of the new member’s background and role within the team.
+    <div class="bbody">
+        <div class="container">
+            <div class="box-container">
+                <div class="content">
+                    <div class="text-section">
+                        <h2>
+                            About<br/><span>US ?</span>
+                        </h2>
+                        <ul class="features">
+                            <li><i class="fas fa-check-circle"></i> Excellence Service </li>
+                            <li><i class="fas fa-check-circle"></i> Integrated Technology </li>
+                            <li><i class="fas fa-check-circle"></i> AI Usage </li>
+                        </ul>
+                        <p>
+                            Excellence in service, integrated technology, and the usage of artificial intelligence (AI) are the driving forces behind modern business success. Excellence in service ensures customer satisfaction by delivering quality experiences that go beyond expectations, fostering long-term loyalty. Integrated technology streamlines operations, enhances communication, and supports seamless collaboration across different platforms, making businesses more agile and efficient. AI, with its ability to process vast amounts of data, automate routine tasks, and provide insightful analytics, is revolutionizing industries by enabling more personalized and intelligent solutions, boosting both customer engagement and operational efficiency. Together, these elements create a powerful synergy that propels businesses into the future.
                         </p>
                     </div>
+                    <div class="image-section">
+                        <br><br><br>
+                        <img src="images/about.png" alt="About Us Image" /> <!-- Update path as needed -->
+                        <div class="badge">
+                            <i class="fas fa-user-plus"></i>
+                            <div>
+                                <span>1K+</span>
+                                <p>Happy Clients</p>
+                            </div>
+                        </div>
+                    </div>
                 </div>
             </div>
 
-            <div class="team-layout">
-                <div class="team-part">
-                    <div class="team-member">
-                        <img src="https://via.placeholder.com/80" alt="John Doe">
-                        <div>
-                            <h4>John Doe</h4>
-                            <p>Team Lead</p>
-                            <p class="description">
-                                John has over a decade of experience in product management and has overseen the development of over 50 successful tech products.
-                            </p>
-                        </div>
-                    </div>
-                </div>
-                <div class="team-part">
-                    <div class="team-member">
-                        <img src="https://via.placeholder.com/80" alt="Jane Doe">
-                        <div>
-                            <h4>Jane Doe</h4>
-                            <p>Marketing Head</p>
-                            <p class="description">
-                                Jane leads the marketing team with passion, ensuring brand visibility and outreach to global markets.
-                            </p>
-                        </div>
-                    </div>
-                </div>
-                <div class="team-part">
-                    <div class="team-member">
-                        <img src="https://via.placeholder.com/80" alt="Alice">
-                        <div>
-                            <h4>Alice</h4>
-                            <p>Lead Developer</p>
-                            <p class="description">
-                                Alice heads our development team, focusing on creating seamless user experiences with cutting-edge technologies.
-                            </p>
-                        </div>
-                    </div>
-                </div>
+            <div class="b-box-container">
+                <div class="team-section">
+                    <h3>Our Team</h3>
 
-                <div class="team-part">
-                    <div class="team-member">
-                        <img src="https://via.placeholder.com/80" alt="Bob">
-                        <div>
-                            <h4>Bob</h4>
-                            <p>Designer</p>
-                            <p class="description">
-                                Bob is our creative genius, responsible for designing stunning interfaces that enhance user engagement.
-                            </p>
+                    <div class="new-member-container">
+                        <div class="new-member highlighted">
+                            <img src="https://via.placeholder.com/80" alt="New Member">
+                            <div>
+                                <h4>New Member</h4>
+                                <p>Role</p>
+                                <p class="description">
+                                    Brief description of the new member’s background and role within the team.
+                                </p>
+                            </div>
                         </div>
                     </div>
-                </div>
 
-                <div class="team-part">
-                    <div class="team-member">
-                        <img src="https://via.placeholder.com/80" alt="Charlie">
-                        <div>
-                            <h4>Charlie</h4>
-                            <p>Data Analyst</p>
-                            <p class="description">
-                                Charlie specializes in data analytics, turning complex data into actionable insights.
-                            </p>
+                    <div class="team-layout">
+                        <div class="team-part">
+                            <div class="team-member">
+                                <img src="https://via.placeholder.com/80" alt="John Doe">
+                                <div>
+                                    <h4>John Doe</h4>
+                                    <p>Team Lead</p>
+                                    <p class="description">
+                                        John has over a decade of experience in product management and has overseen the development of over 50 successful tech products.
+                                    </p>
+                                </div>
+                            </div>
                         </div>
-                    </div>
-                </div>
-                <div class="team-part">
-                    <div class="team-member">
-                        <img src="https://via.placeholder.com/80" alt="David">
-                        <div>
-                            <h4>David</h4>
-                            <p>Sales Manager</p>
-                            <p class="description">
-                                David leads our sales team, developing strategies to drive revenue and improve client relations.
-                            </p>
+                        <div class="team-part">
+                            <div class="team-member">
+                                <img src="https://via.placeholder.com/80" alt="Jane Doe">
+                                <div>
+                                    <h4>Jane Doe</h4>
+                                    <p>Marketing Head</p>
+                                    <p class="description">
+                                        Jane leads the marketing team with passion, ensuring brand visibility and outreach to global markets.
+                                    </p>
+                                </div>
+                            </div>
                         </div>
+                        <!-- Additional team members here... -->
                     </div>
                 </div>
             </div>
         </div>
     </div>
-</div>
-</div>
-<script src="index.html"></script>
 </main>
+
+<script src="index.js"></script> <!-- Update to include JavaScript file -->
