--- a/about.html
+++ b/about.html
@@ -24,7 +24,7 @@
                     </div>
                     <div class="image-section">
                         <br><br><br>
-                        <img src="images/about.png" alt="About Us Image" /> <!-- Update path as needed -->
+                        <img src="images/about.jpg" alt="About Us Image" /> <!-- Update path as needed -->
                         <div class="badge">
                             <i class="fas fa-user-plus"></i>
                             <div>
