--- a/about.html
+++ b/about.html
@@ -1,10 +1,13 @@
 <head>
     <link rel="stylesheet" href="css/about.css">
-    <link rel="stylesheet" href="css/index.css">
+    <link rel="stylesheet" href="css/header.css">
     <link href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.3/css/all.min.css" rel="stylesheet">
 </head>
 
 <main>
+    <div id="navbar">
+        <object type="text/html" data="header.html" style="width:100%; height:50px;"></object>
+    </div>
     <div class="bbody">
         <div class="container">
             <div class="box-container">
@@ -86,4 +89,6 @@
     </div>
 </main>
 
-<script src="index.js"></script> <!-- Update to include JavaScript file -->
+<script src="js/index.js"></script>
+<script src="js/header.js"></script>
+ <!-- Update to include JavaScript file -->
