--- a/header.html
+++ b/header.html
@@ -23,7 +23,7 @@
 
     <!-- Dropdown Menu -->
     <div id="dropdown" class="dropdown-menu">
-        <li><a href="home.html" onclick="loadPage('home')">Home</a></li>
+        <li><a href="index.html" onclick="loadPage('index.html')">Home</a></li>
         <li><a href="about.html" onclick="loadPage('about.html')">About us</a></li>
         <a href="#services">Services</a>
         <a href="#products">Products</a>
