--- a/index.html
+++ b/index.html
@@ -111,6 +111,9 @@
         </div>
     </div>
 </div>
+<footer>
+    <p><a href="#privacy">Privacy Policy</a> | <a href="#terms">Terms and Conditions</a></p>
+</footer>
 
 
     <script src="js/index.js"></script>
