--- a/about.html
+++ b/about.html
@@ -3,8 +3,7 @@
     <link rel="stylesheet" href="css/header.css">
     <link href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.3/css/all.min.css" rel="stylesheet">
 </head>
-
-<main>
+<html>
     <div id="navbar">
         <object type="text/html" data="header.html" style="width:100%; height:50px;"></object>
     </div>
@@ -87,8 +86,8 @@
             </div>
         </div>
     </div>
-</main>
 
-<script src="js/index.js"></script>
+<script src="js/about.js"></script>
 <script src="js/header.js"></script>
  <!-- Update to include JavaScript file -->
+</html>
