--- a/index.html
+++ b/index.html
@@ -112,7 +112,7 @@
     </div>
 </div>
 <footer>
-    <p><a href="/privacypolicy.html">Privacy Policy</a> | <a href="#terms">Terms and Conditions</a></p>
+    <p><a href="privacypolicy.html">Privacy Policy</a> | <a href="#terms">Terms and Conditions</a></p>
 </footer>
 
 
