--- a/about.html
+++ b/about.html
@@ -87,7 +87,20 @@
         </div>
     </div>
 
-<script src="js/about.js"></script>
+<script>
+    function loadNavbar() {
+    const xhr = new XMLHttpRequest();
+    xhr.open('GET', 'header.html', true);
+    xhr.onreadystatechange = function() {
+    if (xhr.readyState === 4 && xhr.status === 200) {
+        document.getElementById('navbar').innerHTML = xhr.responseText;
+    }
+    };
+    xhr.send();
+    }
+    window.onload = loadNavbar;
+    
+</script>
 <script src="js/header.js"></script>
  <!-- Update to include JavaScript file -->
 </html>
