--- a/index.html
+++ b/index.html
@@ -115,7 +115,7 @@
     <p><a href="privacypolicy.html">Privacy Policy</a> | <a href="#terms">Terms and Conditions</a></p>
 </footer>
 
-
+<script src="js/header.js"></script>
 <script>
 let slideIndex = 1;
 showSlides(slideIndex);
