--- a/index.html
+++ b/index.html
@@ -150,7 +150,20 @@ function showSlides(n) {
 }
 
 // Auto-change slides every 5 seconds
-
+setInterval(() => {
+    plusSlides(1);
+}, 5000);
+function loadNavbar() {
+const xhr = new XMLHttpRequest();
+xhr.open('GET', 'header.html', true);
+xhr.onreadystatechange = function() {
+if (xhr.readyState === 4 && xhr.status === 200) {
+    document.getElementById('navbar').innerHTML = xhr.responseText;
+}
+};
+xhr.send();
+}
+window.onload = loadNavbar;
 </script>
 </body>
 </html>
