--- a/about.html
+++ b/about.html
@@ -80,6 +80,43 @@
                                 </div>
                             </div>
                         </div>
+                        <div class="team-part">
+                            <div class="team-member">
+                                <img src="https://via.placeholder.com/80" alt="Bob">
+                                <div>
+                                    <h4>Bob</h4>
+                                    <p>Designer</p>
+                                    <p class="description">
+                                        Bob is our creative genius, responsible for designing stunning interfaces that enhance user engagement.
+                                    </p>
+                                </div>
+                            </div>
+                        </div>
+    
+                        <div class="team-part">
+                            <div class="team-member">
+                                <img src="https://via.placeholder.com/80" alt="Charlie">
+                                <div>
+                                    <h4>Charlie</h4>
+                                    <p>Data Analyst</p>
+                                    <p class="description">
+                                        Charlie specializes in data analytics, turning complex data into actionable insights.
+                                    </p>
+                                </div>
+                            </div>
+                        </div>
+                        <div class="team-part">
+                            <div class="team-member">
+                                <img src="https://via.placeholder.com/80" alt="David">
+                                <div>
+                                    <h4>David</h4>
+                                    <p>Sales Manager</p>
+                                    <p class="description">
+                                        David leads our sales team, developing strategies to drive revenue and improve client relations.
+                                    </p>
+                                </div>
+                            </div>
+                        </div>        
                         <!-- Additional team members here... -->
                     </div>
                 </div>
