--- a/about.html
+++ b/about.html
@@ -42,24 +42,22 @@
                 <div class="team-section">
                     <h3>Our Team</h3>
 
-                    <div class="new-member-container">
-                        <div class="new-member highlighted">
-                            <img src="https://via.placeholder.com/80" alt="New Member">
-                            <div>
-                                <h4>New Member</h4>
-                                <p>Role</p>
-                                <p class="description">
-                                    Brief description of the new member’s background and role within the team.
-                                </p>
+                    <div class="team-ceo">
+                        <div class="team-member ceo">
+                            <img src="https://via.placeholder.com/120" alt="CEO Image">
+                            <div class="ceo-info">
+                                <h4>CEO Name</h4>
+                                <p>Chief Executive Officer</p>
                             </div>
                         </div>
                     </div>
 
-                    <div class="team-layout">
-                        <div class="team-part">
+                    <!-- Horizontal Scrolling Section for Team Members -->
+                    <div class="team-container">
+                        <div class="team-members">
                             <div class="team-member">
                                 <img src="https://via.placeholder.com/80" alt="John Doe">
-                                <div>
+                                <div class="team-info">
                                     <h4>John Doe</h4>
                                     <p>Team Lead</p>
                                     <p class="description">
@@ -67,11 +65,10 @@
                                     </p>
                                 </div>
                             </div>
-                        </div>
-                        <div class="team-part">
+
                             <div class="team-member">
                                 <img src="https://via.placeholder.com/80" alt="Jane Doe">
-                                <div>
+                                <div class="team-info">
                                     <h4>Jane Doe</h4>
                                     <p>Marketing Head</p>
                                     <p class="description">
@@ -79,11 +76,10 @@
                                     </p>
                                 </div>
                             </div>
-                        </div>
-                        <div class="team-part">
+
                             <div class="team-member">
                                 <img src="https://via.placeholder.com/80" alt="Bob">
-                                <div>
+                                <div class="team-info">
                                     <h4>Bob</h4>
                                     <p>Designer</p>
                                     <p class="description">
@@ -91,12 +87,10 @@
                                     </p>
                                 </div>
                             </div>
-                        </div>
-    
-                        <div class="team-part">
+
                             <div class="team-member">
                                 <img src="https://via.placeholder.com/80" alt="Charlie">
-                                <div>
+                                <div class="team-info">
                                     <h4>Charlie</h4>
                                     <p>Data Analyst</p>
                                     <p class="description">
@@ -104,19 +98,17 @@
                                     </p>
                                 </div>
                             </div>
-                        </div>
-                        <div class="team-part">
+
                             <div class="team-member">
                                 <img src="https://via.placeholder.com/80" alt="David">
-                                <div>
+                                <div class="team-info">
                                     <h4>David</h4>
                                     <p>Sales Manager</p>
                                     <p class="description">
                                         David leads our sales team, developing strategies to drive revenue and improve client relations.
                                     </p>
                                 </div>
-                            </div>
-                        </div>        
+                            </div>        
                         <!-- Additional team members here... -->
                     </div>
                 </div>
