--- a/about.html
+++ b/about.html
@@ -42,22 +42,24 @@
                 <div class="team-section">
                     <h3>Our Team</h3>
 
-                    <div class="team-ceo">
-                        <div class="team-member ceo">
-                            <img src="https://via.placeholder.com/120" alt="CEO Image">
-                            <div class="ceo-info">
-                                <h4>CEO Name</h4>
-                                <p>Chief Executive Officer</p>
+                    <div class="new-member-container">
+                        <div class="new-member highlighted">
+                            <img src="https://via.placeholder.com/80" alt="New Member">
+                            <div>
+                                <h4>New Member</h4>
+                                <p>Role</p>
+                                <p class="description">
+                                    Brief description of the new member’s background and role within the team.
+                                </p>
                             </div>
                         </div>
                     </div>
 
-                    <!-- Horizontal Scrolling Section for Team Members -->
-                    <div class="team-container">
-                        <div class="team-members">
+                    <div class="team-layout">
+                        <div class="team-part">
                             <div class="team-member">
                                 <img src="https://via.placeholder.com/80" alt="John Doe">
-                                <div class="team-info">
+                                <div>
                                     <h4>John Doe</h4>
                                     <p>Team Lead</p>
                                     <p class="description">
@@ -65,10 +67,11 @@
                                     </p>
                                 </div>
                             </div>
-
+                        </div>
+                        <div class="team-part">
                             <div class="team-member">
                                 <img src="https://via.placeholder.com/80" alt="Jane Doe">
-                                <div class="team-info">
+                                <div>
                                     <h4>Jane Doe</h4>
                                     <p>Marketing Head</p>
                                     <p class="description">
@@ -76,10 +79,11 @@
                                     </p>
                                 </div>
                             </div>
-
+                        </div>
+                        <div class="team-part">
                             <div class="team-member">
                                 <img src="https://via.placeholder.com/80" alt="Bob">
-                                <div class="team-info">
+                                <div>
                                     <h4>Bob</h4>
                                     <p>Designer</p>
                                     <p class="description">
@@ -87,10 +91,12 @@
                                     </p>
                                 </div>
                             </div>
-
+                        </div>
+    
+                        <div class="team-part">
                             <div class="team-member">
                                 <img src="https://via.placeholder.com/80" alt="Charlie">
-                                <div class="team-info">
+                                <div>
                                     <h4>Charlie</h4>
                                     <p>Data Analyst</p>
                                     <p class="description">
@@ -98,17 +104,19 @@
                                     </p>
                                 </div>
                             </div>
-
+                        </div>
+                        <div class="team-part">
                             <div class="team-member">
                                 <img src="https://via.placeholder.com/80" alt="David">
-                                <div class="team-info">
+                                <div>
                                     <h4>David</h4>
                                     <p>Sales Manager</p>
                                     <p class="description">
                                         David leads our sales team, developing strategies to drive revenue and improve client relations.
                                     </p>
                                 </div>
-                            </div>        
+                            </div>
+                        </div>        
                         <!-- Additional team members here... -->
                     </div>
                 </div>
