--- a/home.html
+++ b/home.html
@@ -6,33 +6,31 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <style>
         .bbody {
-            font-family: 'Times New Roman', serif; /* Changed to Times New Roman */
+            font-family: 'Times New Roman', serif;
             margin: 0;
-            padding-top: 20px; /* Removed padding-left */
-            background-color: #2c3e50; /* Set background color to #2c3e50 */
+            padding-top: 20px;
+            background-color: #2c3e50;
         }
 
         .container,
         .company-review,
-        .company-info,
-        .footer {
+        .company-info {
             padding-left: 20px;
             padding-right: 20px;
             width: 100%;
-            max-width: 1200px;
+            background-color: #fff;
+            border-radius: 10px;
+            box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
+            margin-bottom: 40px;
         }
 
         .container {
-            background-color: #f0f0f0;
-            border-radius: 10px;
             display: flex;
             justify-content: space-between;
             align-items: center;
             padding: 40px;
             height: 500px;
-            box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
             position: relative;
-            margin-bottom: 40px;
             flex-direction: row;
         }
 
@@ -91,37 +89,33 @@
         }
 
         .pagination {
-  display: flex;
-  justify-content: center; /* Center the dots horizontally */
-  position: absolute;
-  bottom: 20px; /* Adjust as needed for placement */
-  left: 0;
-  right: 0;
-  margin: 0 auto;
-}
+            display: flex;
+            justify-content: center;
+            position: absolute;
+            bottom: 20px;
+            left: 0;
+            right: 0;
+            margin: 0 auto;
+        }
 
-.pagination div {
-  width: 10px;
-  height: 10px;
-  background-color: #ccc;
-  border-radius: 50%;
-  margin: 0 5px;
-  cursor: pointer;
-}
-.pagination .active {
-  background-color: #007bff;
-}
+        .pagination div {
+            width: 10px;
+            height: 10px;
+            background-color: #ccc;
+            border-radius: 50%;
+            margin: 0 5px;
+            cursor: pointer;
+        }
 
+        .pagination .active {
+            background-color: #007bff;
+        }
 
         .company-review {
-            background-color: #fff;
-            border-radius: 10px;
-            padding: 40px;
-            box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
-            margin-bottom: 40px;
             display: flex;
             flex-direction: column;
             align-items: center;
+            padding: 40px;
         }
 
         .review-header {
@@ -138,9 +132,15 @@
             gap: 20px;
         }
 
+        @media (min-width: 768px) {
+            .review-stats {
+                flex-direction: row; /* Align stats side by side on larger screens */
+            }
+        }
+
         .stat-box {
             background-color: #f0f0f0;
-            width: calc(33% - 20px);
+            width: calc(25% - 20px); /* Reduced width to 25% */
             padding: 20px;
             border-radius: 10px;
             text-align: center;
@@ -161,15 +161,11 @@
         }
 
         .company-info {
-            background-color: #fff;
-            border-radius: 10px;
-            padding: 40px;
-            box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
             display: flex;
             flex-wrap: wrap;
             justify-content: space-between;
             gap: 20px;
-            margin-bottom: 40px;
+            padding: 40px;
         }
 
         .info-section {
@@ -193,6 +189,34 @@
             font-size: 16px;
             color: #777;
         }
+
+        /* Media Queries for Responsiveness */
+        @media (max-width: 768px) {
+            .container {
+                flex-direction: column;
+                height: auto;
+                padding: 20px;
+            }
+
+            .image-container,
+            .text-container {
+                width: 100%;
+                margin-left: 0;
+            }
+
+            .text-container {
+                margin-top: 20px;
+            }
+
+            .review-stats {
+                flex-direction: column;
+            }
+        }
+        @media (max-width: 768px) {
+        .stat-box {
+            width: calc(50% - 10px); /* Increased width for better display on small screens */
+        }
+    }
     </style>
 </head>
 
@@ -248,4 +272,5 @@
         </div>
     </div>
 </body>
+
 </html>
