--- a/header.html
+++ b/header.html
@@ -24,11 +24,11 @@
 
     <!-- Dropdown Menu -->
     <div id="dropdown" class="dropdown-menu">
-        <li><a href="index.html" onclick="loadPage('index.html')">Home</a></li>
-        <li><a href="about.html" onclick="loadPage('about.html')">About us</a></li>
+        <a href="index.html" onclick="loadPage('index.html')">Home</a>
+        <a href="about.html" onclick="loadPage('about.html')">About us</a>
         <a href="#services">Services</a>
         <a href="#products">Products</a>
-        <a href="#contact">Contact Us</a>
+        <a href="contactus.html">Contact Us</a>
         <a href="#testimonials">Testimonials</a>
         <a href="#blog">Blog</a>
         <a href="#support">Support</a>
