--- a/header.html
+++ b/header.html
@@ -28,7 +28,7 @@
         <a href="about.html" onclick="loadPage('about.html')">About us</a>
         <a href="#services">Services</a>
         <a href="#products">Products</a>
-        <a href="contactus.html">Contact Us</a>
+        <a href="contact.html" onclick="loadPage('contact.html')">Contact Us</a>
         <a href="#testimonials">Testimonials</a>
         <a href="#blog">Blog</a>
         <a href="#support">Support</a>
