--- a/home.html
+++ b/home.html
@@ -15,8 +15,7 @@
         .container,
         .company-review,
         .company-info {
-            padding-left: 20px;
-            padding-right: 20px;
+            padding: 20px;
             width: 100%;
             background-color: #fff;
             border-radius: 10px;
@@ -29,35 +28,30 @@
             justify-content: space-between;
             align-items: center;
             padding: 40px;
-            height: 500px;
-            position: relative;
             flex-direction: row;
         }
 
         .image-container {
             width: 50%;
-            height: 80%;
+            height: auto;
             position: relative;
         }
 
         .image-container img {
             width: 100%;
-            height: 80%;
+            height: auto;
             border-radius: 10px;
             object-fit: cover;
-            position: absolute;
-            top: 0;
-            left: 0;
             display: none;
         }
 
         .image-container img.active {
             display: block;
+            
         }
 
         .text-container {
-            width: 50%;
-            height: 100%;
+            width: 45%;
             display: flex;
             flex-direction: column;
             justify-content: center;
@@ -91,11 +85,7 @@
         .pagination {
             display: flex;
             justify-content: center;
-            position: absolute;
-            bottom: 20px;
-            left: 0;
-            right: 0;
-            margin: 0 auto;
+            margin-top: 10px;
         }
 
         .pagination div {
@@ -112,10 +102,7 @@
         }
 
         .company-review {
-            display: flex;
-            flex-direction: column;
-            align-items: center;
-            padding: 40px;
+            text-align: center;
         }
 
         .review-header {
@@ -128,24 +115,16 @@
             display: flex;
             flex-wrap: wrap;
             justify-content: center;
-            width: 100%;
             gap: 20px;
-        }
-
-        @media (min-width: 768px) {
-            .review-stats {
-                flex-direction: row; /* Align stats side by side on larger screens */
-            }
         }
 
         .stat-box {
             background-color: #f0f0f0;
-            width: calc(25% - 20px); /* Reduced width to 25% */
+            width: 25%;
             padding: 20px;
             border-radius: 10px;
             text-align: center;
             box-shadow: 0 2px 4px rgba(0, 0, 0, 0.1);
-            margin-bottom: 10px;
         }
 
         .stat-box h2 {
@@ -163,21 +142,16 @@
         .company-info {
             display: flex;
             flex-wrap: wrap;
-            justify-content: space-between;
             gap: 20px;
-            padding: 40px;
         }
 
         .info-section {
             flex: 1;
             min-width: 250px;
-            max-width: 100%;
             background-color: #f0f0f0;
             padding: 20px;
             border-radius: 10px;
             box-shadow: 0 2px 4px rgba(0, 0, 0, 0.1);
-            margin-bottom: 20px;
-            box-sizing: border-box;
         }
 
         .info-section h3 {
@@ -194,36 +168,40 @@
         @media (max-width: 768px) {
             .container {
                 flex-direction: column;
-                height: auto;
                 padding: 20px;
             }
 
             .image-container,
             .text-container {
                 width: 100%;
-                margin-left: 0;
+                margin: 0 auto;
             }
 
-            .text-container {
-                margin-top: 20px;
+            .image-container {
+                margin-bottom: 20px;
             }
 
             .review-stats {
                 flex-direction: column;
             }
-        }
-        @media (max-width: 768px) {
-        .stat-box {
-            width: calc(50% - 10px); /* Increased width for better display on small screens */
-        }
+
+            .stat-box {
+                width: 80%;
+                margin: 0 auto 10px auto;
+            }
+            .image-container img.active {
+        width: 90%; /* Adjust for smaller screens */
+        top: 5%;
+        left: 5%;
     }
+        }
     </style>
 </head>
 
-<body class='bbody'>
+<body class="bbody">
     <div class="container">
         <div class="image-container">
-            <img src="truck1.png" alt="Product Image" class="active">
+            <img src="truck.jpg" alt="Product Image" class="active">
             <img src="product-image2.jpg" alt="Product Image 2">
             <div class="pagination">
                 <div class="active"></div>
@@ -256,6 +234,7 @@
             </div>
         </div>
     </div>
+
     <div class="company-info">
         <div class="info-section">
             <h3>Company Mission</h3>
