--- a/contact.html
+++ b/contact.html
@@ -27,20 +27,17 @@
 
         <div class="contact-form">
             <h2>Send Us a Message</h2>
-            <form action="/submit_contact_form" method="POST">
-                <label for="name">Name</label>
-                <input type="text" id="name" name="name" placeholder="Your Full Name" required>
+            <form action="azelictechnologies@gmail.com" method="post" enctype="text/plain">
+                <label for="name">Your Name</label>
+                <input type="text" id="name" name="name" placeholder="Enter your name" required>
 
-                <label for="email">Email</label>
-                <input type="email" id="email" name="email" placeholder="Your Email Address" required>
+                <label for="email">Your Email</label>
+                <input type="email" id="email" name="email" placeholder="Enter your email" required>
 
-                <label for="subject">Subject</label>
-                <input type="text" id="subject" name="subject" placeholder="Subject" required>
+                <label for="message">Your Message</label>
+                <textarea id="message" name="message" rows="5" placeholder="Write your message here..." required></textarea>
 
-                <label for="message">Message</label>
-                <textarea id="message" name="message" placeholder="Your Message" rows="5" required></textarea>
-
-                <button type="submit">Submit</button>
+                <button type="submit">Send Message</button>
             </form>
         </div>
     </section>
