--- a/contact.html
+++ b/contact.html
@@ -27,7 +27,7 @@
 
         <div class="contact-form">
             <h2>Send Us a Message</h2>
-            <form action="azelictechnologies@gmail.com" method="post" enctype="text/plain">
+            <form action="azelictechnologies@gmail.com" method="get" enctype="text/plain">
                 <label for="name">Your Name</label>
                 <input type="text" id="name" name="name" placeholder="Enter your name" required>
 
