--- a/index.html
+++ b/index.html
@@ -111,7 +111,7 @@
     </div>
 </div>
 <footer>
-    <p><a href="privacypolicy.html">Privacy Policy</a> | <a href="#terms">Terms and Conditions</a></p>
+    <p><a href="privacypolicy.html">Privacy Policy</a> | <a href="termsandconditions.html">Terms and Conditions</a></p>
 </footer>
 
 <script src="js/header.js" defer></script>
