--- a/contact.html
+++ b/contact.html
@@ -19,9 +19,9 @@
     <section class="contact-section">
         <div class="contact-info">
             <h2>Our Contact Details</h2>
-            <p><strong>Address:</strong> 123 Main Street, Bengaluru, Karnataka, India</p>
-            <p><strong>Phone:</strong> +91 98765 43210</p>
-            <p><strong>Email:</strong> contact@yourcompany.com</p>
+            <p><strong>Address:</strong> Tumkur, Bengaluru, Karnataka, India</p>
+            <p><strong>Phone:</strong> +91 9916500457</p>
+            <p><strong>Email:</strong> azelictechnologies@gmail.com</p>
             <p><strong>Working Hours:</strong> Mon - Fri, 9 AM - 6 PM</p>
         </div>
 
