--- a/contact.html
+++ b/contact.html
@@ -28,13 +28,13 @@
         <div class="contact-form">
             <h2>Send Us a Message</h2>
             <form action="mailto:azelictechnologies@gmail.com" method="get" enctype="text/plain">
-                <label for="name">Your Name</label>
+                <label for="name">Name</label>
                 <input type="text" id="name" name="name" placeholder="Enter your name" required>
 
-                <label for="email">Your Email</label>
+                <label for="email">Email</label>
                 <input type="email" id="email" name="email" placeholder="Enter your email" required>
 
-                <label for="message">Your Message</label>
+                <label for="message">Message</label>
                 <textarea id="message" name="message" rows="5" placeholder="Write your message here..." required></textarea>
 
                 <button type="submit">Send Message</button>
