--- a/contact.html
+++ b/contact.html
@@ -45,6 +45,7 @@
     <footer>
         <p>&copy; 2024 Your Company Name. All Rights Reserved.</p>
     </footer>
+    <script src="js/header.js"></script>
     <script>
         setInterval(() => {
             plusSlides(1);
