--- a/support.html
+++ b/support.html
@@ -10,7 +10,7 @@
         body {
             font-family: Arial, sans-serif;
             line-height: 1.6;
-            background-color: #f4f4f4;
+            background-color: #d3dbea;
             margin: 0;
             padding: 0;
         }
