--- a/termsandconditions.html
+++ b/termsandconditions.html
@@ -5,12 +5,14 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Terms and Conditions - Azelic Technologies</title>
-    <link rel="stylesheet" href="css/about.css">
+    <link rel="stylesheet" href="css/t&c.css">
     <link rel="stylesheet" href="css/header.css">
 </head>
 
 <body>
-
+    <div id="navbar">
+        <object type="text/html" data="header.html" style="width:100%; height:50px;"></object>
+    </div>
     
     <h1 style="text-align:center">Terms and Conditions</h1>
     <div class="container">
