--- a/index.html
+++ b/index.html
@@ -72,7 +72,7 @@
 <div class="products-section">
     <div class="product">
         <div class="product-image">
-            <img src="images\azelic logo.jpg" alt="Hotel Application">
+            <img src="images\logo.jpg" alt="Hotel Application">
         </div>
         <div class="product-content">
             <h3>Hotel Application</h3>
@@ -82,7 +82,7 @@
 
     <div class="product">
         <div class="product-image">
-            <img src="images\Designer (1) (1).png" alt="Spedocity - Vehicle Booking">
+            <img src="images\spedocity.png" alt="Spedocity - Vehicle Booking">
         </div>
         <div class="product-content">
             <h3>Spedocity - Vehicle Booking Application</h3>
@@ -92,7 +92,7 @@
 
     <div class="product">
         <div class="product-image">
-            <img src="images\azelic logo.jpg" alt="Budget Application">
+            <img src="images\logo.jpg" alt="Budget Application">
         </div>
         <div class="product-content">
             <h3>Budget Application</h3>
@@ -102,7 +102,7 @@
 
     <div class="product">
         <div class="product-image">
-            <img src="images\azelic logo.jpg" alt="School Software">
+            <img src="images\logo.jpg" alt="School Software">
         </div>
         <div class="product-content">
             <h3>School Software</h3>
