--- a/termsandconditions.html
+++ b/termsandconditions.html
@@ -55,10 +55,9 @@
         
             <h2>Contact Information</h2>
             <p>If you have any questions or concerns about these Terms and Conditions, please contact us at:</p>
-            <p>Email: support@azelict.com</p>
-            <p>Phone: +123 456 7890</p>
+            <p>Email: azelictechnologies@gmail.com</p>
+            <p>Phone: 9916500457</p>
         </div>
-
     </div>
 
 </body>
