--- a/index.html
+++ b/index.html
@@ -72,7 +72,7 @@
 <div class="products-section">
     <div class="product">
         <div class="product-image">
-            <img src="images\logo.jpg" alt="Hotel Application">
+            <img src="images\logo.png" alt="Hotel Application">
         <div class="product-content">
             <h3>Hotel Application</h3>
             <p>Our Hotel Application offers a seamless experience for hotel management and guest bookings. It includes features like online room reservations, booking management, customer support, and more, making hotel operations more efficient and user-friendly.</p>
@@ -92,7 +92,7 @@
 
     <div class="product">
         <div class="product-image">
-            <img src="images\logo.jpg" alt="Budget Application">
+            <img src="images\logo.png" alt="Budget Application">
         </div>
         <div class="product-content">
             <h3>Budget Application</h3>
@@ -102,7 +102,7 @@
 
     <div class="product">
         <div class="product-image">
-            <img src="images\logo.jpg" alt="School Software">
+            <img src="images\logo.png" alt="School Software">
         </div>
         <div class="product-content">
             <h3>School Software</h3>
