--- a/index.html
+++ b/index.html
@@ -39,14 +39,12 @@
     </div>
     <div class="services-section">
     <div class="service">
-        <div class="content">
         <div class="symbol">
             <img src="images\mobile-app.png" alt="Software Development Icon">
-        <span>
-            <h3>Software Development</h3></span>
+        </div>
+        <div class="content">
+            <h3>Software Development</h3>
             <p>Our Software Development Services deliver high-quality web and mobile applications to enhance user engagement and streamline processes. We transform your ideas into innovative solutions with precision and efficiency.</p>
-        </div>
-        </div>
         </div>
     </div>
 
