--- a/header.html
+++ b/header.html
@@ -29,7 +29,7 @@
         <a href="services.html" onclick="loadPage('services.html')">Services</a>>Services</a>
         <a href="#products">Products</a>
         <a href="contact.html" onclick="loadPage('contact.html')">Contact Us</a>
-        <a href="#testimonials">Testimonials</a>
+        <a href="testimonials.html" onclick="loadPage('testimonials.html')">Testimonials</a>
         <a href="#blog">Blog</a>
         <a href="#support">Support</a>
         <a href="#careers">Careers</a>
