--- a/header.html
+++ b/header.html
@@ -31,7 +31,7 @@
         <a href="contact.html" onclick="loadPage('contact.html')">Contact Us</a>
         <a href="testimonials.html" onclick="loadPage('testimonials.html')">Testimonials</a>
         <a href="#blog">Blog</a>
-        <a href="#support">Support</a>
+        <a href="support.html" onclick="loadPage('support.html')">Support</a>
         <a href="#careers">Careers</a>
     </div>
 
