--- a/support.html
+++ b/support.html
@@ -8,35 +8,39 @@
     <link rel="stylesheet" href="styles.css"> <!-- Optional: Link to your external CSS file -->
     <style>
         body {
-            font-family: Arial, sans-serif;
-            line-height: 1.6;
-            background-color: #d3dbea;
+            font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
+            line-height: 1.8;
+            background-color: #30354a;
             margin: 0;
             padding: 0;
-        }
-
-        header {
-            background-color: #333;
-            color: #fff;
-            padding: 1rem;
-            text-align: center;
-        }
-
-        h2 {
             color: #333;
         }
 
+        h1 {
+            text-align: center;
+            color: #fafbfb;
+            margin-top: 20px;
+        }
+
+        h2 {
+            color: #004080;
+            border-bottom: 2px solid #ccc;
+            padding-bottom: 10px;
+            margin-bottom: 20px;
+        }
+
         .section {
-            margin: 20px 0;
-            padding: 15px;
+            margin: 20px auto;
+            padding: 20px;
             background-color: #fff;
-            border-radius: 8px;
-            box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
+            border-radius: 10px;
+            box-shadow: 0 4px 15px rgba(0, 0, 0, 0.1);
+            max-width: 800px;
         }
 
         p {
             font-size: 1rem;
-            color: #333;
+            color: #555;
             margin-bottom: 15px;
         }
 
@@ -45,14 +49,53 @@
             list-style-type: disc;
         }
 
-        footer {
-            text-align: center;
-            background-color: #333;
-            color: white;
-            padding: 10px;
-            position: fixed;
-            width: 100%;
-            bottom: 0;
+        ul li {
+            margin-bottom: 10px;
+        }
+
+        a {
+            color: #004080;
+            text-decoration: none;
+            font-weight: 600;
+        }
+
+        a:hover {
+            text-decoration: underline;
+        }
+
+        .faq-list strong {
+            color: #004080;
+            cursor: pointer;
+            display: inline-block;
+            margin-bottom: 10px;
+            transition: color 0.3s;
+        }
+
+        .faq-list strong:hover {
+            color: #0080ff;
+        }
+
+        .faq-list .services-list,
+        .faq-list .quote-info,
+        .faq-list .support-info {
+            display: none;
+            padding-left: 20px;
+            margin-top: 10px;
+        }
+
+        .btn-submit {
+            background-color: #004080;
+            color: #fff;
+            padding: 12px 20px;
+            border: none;
+            border-radius: 5px;
+            font-size: 1rem;
+            cursor: pointer;
+            transition: background-color 0.3s;
+        }
+
+        .btn-submit:hover {
+            background-color: #0080ff;
         }
 
         .form-section {
@@ -60,51 +103,36 @@
         }
 
         .form-group {
-            margin-bottom: 15px;
+            margin-bottom: 20px;
         }
 
         .form-group label {
             display: block;
+            font-weight: bold;
             margin-bottom: 5px;
         }
 
         .form-group input,
         .form-group textarea {
             width: 100%;
-            padding: 10px;
-            border: 1px solid #ddd;
+            padding: 12px;
+            border: 1px solid #ccc;
             border-radius: 5px;
-        }
-
-        .btn-submit {
-            background-color: #333;
-            color: rgb(44, 119, 185);
-            padding: 10px 20px;
-            border: none;
-            border-radius: 5px;
-            cursor: pointer;
-        }
-
-        .btn-submit:hover {
-            background-color: #555;
-        }
-
-        /* Hide content by default */
-        .services-list,
-        .quote-info,
-        .support-info {
-            display: none;
+            font-size: 1rem;
         }
     </style>
 </head>
 
 <body>
-    <h1 style="text-align:center">Azelic Support</h1>
-    <div class="section">
+
+    <h1>Azelic Support</h1>
+
+    <div class="section faq-list">
         <h2>Frequently Asked Questions (FAQs)</h2>
         <p>Find answers to the most common questions about our services:</p>
         <ul>
-            <li><strong>What services do you offer?</strong>
+            <li>
+                <strong>What services do you offer?</strong>
                 <ul class="services-list">
                     <li>Data Analytics</li>
                     <li>Website Development</li>
@@ -112,12 +140,14 @@
                     <li>Consultancy Services</li>
                 </ul>
             </li>
-            <li><strong>How can I get a quote for a service?</strong>
+            <li>
+                <strong>How can I get a quote for a service?</strong>
                 <div class="quote-info">
                     <p>You can get in touch with us via email or call us directly for a personalized quote based on your project needs.</p>
                 </div>
             </li>
-            <li><strong>Do you offer customer support after service delivery?</strong>
+            <li>
+                <strong>Do you offer customer support after service delivery?</strong>
                 <div class="support-info">
                     <p>Yes, we provide ongoing support and maintenance for our projects. Please contact us for further details.</p>
                 </div>
@@ -136,7 +166,6 @@
         </ul>
     </div>
 
-
     <script>
         // Select elements for toggling
         const servicesLink = document.querySelector("strong");
@@ -150,32 +179,19 @@
 
         // Toggle functionality for "What services do you offer?"
         servicesLink.addEventListener("click", function () {
-            if (servicesList.style.display === "none" || servicesList.style.display === "") {
-                servicesList.style.display = "block"; // Show the list
-            } else {
-                servicesList.style.display = "none"; // Hide the list
-            }
+            servicesList.style.display = servicesList.style.display === "block" ? "none" : "block";
         });
 
         // Toggle functionality for "How can I get a quote for a service?"
         quoteLink.addEventListener("click", function () {
-            if (quoteInfo.style.display === "none" || quoteInfo.style.display === "") {
-                quoteInfo.style.display = "block"; // Show the quote info
-            } else {
-                quoteInfo.style.display = "none"; // Hide the quote info
-            }
+            quoteInfo.style.display = quoteInfo.style.display === "block" ? "none" : "block";
         });
 
         // Toggle functionality for "Do you offer customer support after service delivery?"
         supportLink.addEventListener("click", function () {
-            if (supportInfo.style.display === "none" || supportInfo.style.display === "") {
-                supportInfo.style.display = "block"; // Show the support info
-            } else {
-                supportInfo.style.display = "none"; // Hide the support info
-            }
+            supportInfo.style.display = supportInfo.style.display === "block" ? "none" : "block";
         });
     </script>
-
 </body>
 
 </html>
