--- a/testimonials.html
+++ b/testimonials.html
@@ -9,7 +9,7 @@
         body {
             font-family: Arial, sans-serif;
             line-height: 1.6;
-            background-color: #d3dbea;
+            background-color: #30354a;
             margin: 0;
             padding: 0;
         }
@@ -28,7 +28,7 @@
         }
 
         h2 {
-            color: #333;
+            color: white;
             text-align: center;
         }
 
