--- a/header.html
+++ b/header.html
@@ -32,7 +32,7 @@
         <a href="testimonials.html" onclick="loadPage('testimonials.html')">Testimonials</a>
         <a href="#blog">Blog</a>
         <a href="support.html" onclick="loadPage('support.html')">Support</a>
-        <a href="#careers">Careers</a>
+        <a href="careers.html" onclick="loadPage('careers.html')">Careers</a>
     </div>
 
     <!-- Social Media Icons -->
