--- a/about.html
+++ b/about.html
@@ -2,6 +2,7 @@
 <head>
     <link rel="stylesheet" href="css/about.css">
     <link rel="stylesheet" href="css/header.css">
+    <link href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.3/css/all.min.css" rel="stylesheet" />
 </head>
     <div id="navbar">
         <object type="text/html" data="header.html" style="width:100%; height:50px;"></object>
