--- a/careers.html
+++ b/careers.html
@@ -5,68 +5,16 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Careers - Azelic Technologies</title>
-    <style>
-        body {
-            font-family: Arial, sans-serif;
-            line-height: 1.6;
-            background-color: #30354a;
-            margin: 0;
-            padding: 0;
-            color: #333;
-        }
+    <link rel="stylesheet" href="css/careers.css">
+    <link rel="stylesheet" href="css/header.css">
+    <link href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.3/css/all.min.css" rel="stylesheet" />
 
-        h1 {
-            margin: 0;
-        }
-
-        .container {
-            width: 90%;
-            margin: 2rem auto;
-            max-width: 1200px;
-        }
-
-        .intro, .job-section, .why-us, .testimonials {
-            background-color: #fff;
-            padding: 2rem;
-            margin-bottom: 1.5rem;
-            border-radius: 8px;
-            box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
-        }
-
-        h2 {
-            color: #2c3e50;
-        }
-
-        .job-listing {
-            margin-bottom: 1rem;
-            padding: 1rem;
-            border: 1px solid #ddd;
-            border-radius: 5px;
-            background-color: #fafafa;
-        }
-
-        .job-listing h3 {
-            margin: 0 0 0.5rem;
-        }
-
-        .apply-btn {
-            display: inline-block;
-            background-color: #2c3e50;
-            color: #fff;
-            padding: 0.5rem 1rem;
-            text-decoration: none;
-            border-radius: 5px;
-            margin-top: 1rem;
-        }
-
-        .apply-btn:hover {
-            background-color: #34495e;
-        }
-
-    </style>
 </head>
 
 <body>
+    <div id="navbar">
+        <object type="text/html" data="header.html" style="width:100%; height:50px;"></object>
+    </div>
 
     <div class="container">
         <section class="intro">
@@ -117,5 +65,19 @@
     </div>
 
 </body>
-
+<script>
+    function loadNavbar() {
+    const xhr = new XMLHttpRequest();
+    xhr.open('GET', 'header.html', true);
+    xhr.onreadystatechange = function() {
+    if (xhr.readyState === 4 && xhr.status === 200) {
+        document.getElementById('navbar').innerHTML = xhr.responseText;
+    }
+    };
+    xhr.send();
+    }
+    window.onload = loadNavbar;
+    
+</script>
+<script src="js/header.js"></script>
 </html>
