--- a/support.html
+++ b/support.html
@@ -5,125 +5,15 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Support - Azelic Technologies</title>
-    <link rel="stylesheet" href="styles.css"> <!-- Optional: Link to your external CSS file -->
-    <style>
-        body {
-            font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
-            line-height: 1.8;
-            background-color: #30354a;
-            margin: 0;
-            padding: 0;
-            color: #333;
-        }
-
-        h1 {
-            text-align: center;
-            color: #fafbfb;
-            margin-top: 20px;
-        }
-
-        h2 {
-            color: #004080;
-            border-bottom: 2px solid #ccc;
-            padding-bottom: 10px;
-            margin-bottom: 20px;
-        }
-
-        .section {
-            margin: 20px auto;
-            padding: 20px;
-            background-color: #fff;
-            border-radius: 10px;
-            box-shadow: 0 4px 15px rgba(0, 0, 0, 0.1);
-            max-width: 800px;
-        }
-
-        p {
-            font-size: 1rem;
-            color: #555;
-            margin-bottom: 15px;
-        }
-
-        ul {
-            margin-left: 20px;
-            list-style-type: disc;
-        }
-
-        ul li {
-            margin-bottom: 10px;
-        }
-
-        a {
-            color: #004080;
-            text-decoration: none;
-            font-weight: 600;
-        }
-
-        a:hover {
-            text-decoration: underline;
-        }
-
-        .faq-list strong {
-            color: #004080;
-            cursor: pointer;
-            display: inline-block;
-            margin-bottom: 10px;
-            transition: color 0.3s;
-        }
-
-        .faq-list strong:hover {
-            color: #0080ff;
-        }
-
-        .faq-list .services-list,
-        .faq-list .quote-info,
-        .faq-list .support-info {
-            display: none;
-            padding-left: 20px;
-            margin-top: 10px;
-        }
-
-        .btn-submit {
-            background-color: #004080;
-            color: #fff;
-            padding: 12px 20px;
-            border: none;
-            border-radius: 5px;
-            font-size: 1rem;
-            cursor: pointer;
-            transition: background-color 0.3s;
-        }
-
-        .btn-submit:hover {
-            background-color: #0080ff;
-        }
-
-        .form-section {
-            margin-top: 30px;
-        }
-
-        .form-group {
-            margin-bottom: 20px;
-        }
-
-        .form-group label {
-            display: block;
-            font-weight: bold;
-            margin-bottom: 5px;
-        }
-
-        .form-group input,
-        .form-group textarea {
-            width: 100%;
-            padding: 12px;
-            border: 1px solid #ccc;
-            border-radius: 5px;
-            font-size: 1rem;
-        }
-    </style>
+    <link rel="stylesheet" href="css/support.css">
+    <link rel="stylesheet" href="css/header.css">
+    <link href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.3/css/all.min.css" rel="stylesheet" />
 </head>
 
 <body>
+    <div id="navbar">
+        <object type="text/html" data="header.html" style="width:100%; height:50px;"></object>
+    </div>
 
     <h1>Azelic Support</h1>
 
@@ -165,33 +55,22 @@
             <li><a href="#">Blog</a></li>
         </ul>
     </div>
-
-    <script>
-        // Select elements for toggling
-        const servicesLink = document.querySelector("strong");
-        const servicesList = document.querySelector(".services-list");
-
-        const quoteLink = document.querySelectorAll("li strong")[1];
-        const quoteInfo = document.querySelector(".quote-info");
-
-        const supportLink = document.querySelectorAll("li strong")[2];
-        const supportInfo = document.querySelector(".support-info");
-
-        // Toggle functionality for "What services do you offer?"
-        servicesLink.addEventListener("click", function () {
-            servicesList.style.display = servicesList.style.display === "block" ? "none" : "block";
-        });
-
-        // Toggle functionality for "How can I get a quote for a service?"
-        quoteLink.addEventListener("click", function () {
-            quoteInfo.style.display = quoteInfo.style.display === "block" ? "none" : "block";
-        });
-
-        // Toggle functionality for "Do you offer customer support after service delivery?"
-        supportLink.addEventListener("click", function () {
-            supportInfo.style.display = supportInfo.style.display === "block" ? "none" : "block";
-        });
-    </script>
 </body>
 
+<script>
+    function loadNavbar() {
+    const xhr = new XMLHttpRequest();
+    xhr.open('GET', 'header.html', true);
+    xhr.onreadystatechange = function() {
+    if (xhr.readyState === 4 && xhr.status === 200) {
+        document.getElementById('navbar').innerHTML = xhr.responseText;
+    }
+    };
+    xhr.send();
+    }
+    window.onload = loadNavbar;
+    
+</script>
+<script src="js/header.js"></script>
+<script src="js/support.js"></script>
 </html>
