--- a/about.html
+++ b/about.html
@@ -86,6 +86,10 @@
             </div>
         </div>
     </div>
+    <footer>
+        <p>&copy; 2024 Your Company Name. All Rights Reserved.</p>
+        <p><a href="privacypolicy.html">Privacy Policy</a> | <a href="termsandconditions.html">Terms and Conditions</a></p>
+    </footer>
 
 <script>
     function loadNavbar() {
