--- a/careers.html
+++ b/careers.html
@@ -63,6 +63,10 @@
             <p>"Azelic Technologies provides an excellent environment for growth and learning. The projects are challenging, and the team is incredibly supportive!" – <strong>Priya K., Data Analyst</strong></p>
         </section>
     </div>
+    <footer>
+        <p>&copy; 2024 Your Company Name. All Rights Reserved.</p>
+        <p><a href="privacypolicy.html">Privacy Policy</a> | <a href="termsandconditions.html">Terms and Conditions</a></p>
+    </footer>
 
 </body>
 <script>
