--- a/cprofile.html
+++ b/cprofile.html
@@ -47,37 +47,37 @@
                     </svg>
                     <div class="node" style="--i: 1;">
                         <div class="circle-node">
-                            <img src="images/tom.jpg">
+                            <img src="images/akhilesh.jpeg">
                         </div>
                         <span>Akhilesh</span>
                     </div>
                     <div class="node" style="--i: 2;">
                         <div class="circle-node">
-                            <img src="images/ben.jpg">
+                            <img src="images/syed.jpeg">
                         </div>
                         <span>Syed </span>
                     </div>
                     <div class="node" style="--i: 3;">
                         <div class="circle-node">
-                            <img src="images/angela.jpg"/>
+                            <img src="images/sahana.jpeg"/>
                         </div>
                         <span>Sahana G</span>
                     </div>
                     <div class="node" style="--i: 4;">
                         <div class="circle-node">
-                            <img src="images/ginger.jpg"/>
+                            <img src="images/navya.jpeg"/>
                         </div>
                         <span>Navyashri S</span>
                     </div>
                     <div class="node" style="--i: 5;">
                         <div class="circle-node">
-                            <img src="images/hank.jpg"/>
+                            <img src="images/kavya.jpeg"/>
                         </div>
                         <span>N Kavya</span>
                     </div>
                     <div class="node" style="--i: 6;">
                         <div class="circle-node">
-                            <img src="images/rabbit.jpg"/>
+                            <img src="images/sanjana.jpeg"/>
                         </div>
                         <span>Sanjana</span>
                     </div>
@@ -113,6 +113,10 @@
     <div class="download-section">
         <a href="company_profile.txt" class="download-button">Download Company Profile</a>
     </div>
+    <footer>
+        <p>&copy; 2024 Your Company Name. All Rights Reserved.</p>
+        <p><a href="privacypolicy.html">Privacy Policy</a> | <a href="termsandconditions.html">Terms and Conditions</a></p>
+    </footer>
 </bbody>
 <script>
     function loadNavbar() {
