--- a/header.html
+++ b/header.html
@@ -26,8 +26,8 @@
     <div id="dropdown" class="dropdown-menu">
         <a href="index.html" onclick="loadPage('index.html')">Home</a>
         <a href="about.html" onclick="loadPage('about.html')">About us</a>
-        <a href="services.html" onclick="loadPage('services.html')">Services</a>>Services</a>
-        <a href="cprofile.html" onclick="loadPage('cprofile.html')">Services</a>>Services</a>
+        <a href="services.html" onclick="loadPage('services.html')">Services</a>
+        <a href="cprofile.html" onclick="loadPage('cprofile.html')">Company profile</a>
         <a href="#products">Products</a>
         <a href="contact.html" onclick="loadPage('contact.html')">Contact Us</a>
         <a href="testimonials.html" onclick="loadPage('testimonials.html')">Testimonials</a>
