--- a/services.html
+++ b/services.html
@@ -123,6 +123,10 @@
         </div>
     
     </div>
+    <footer>
+        <p>&copy; 2024 Your Company Name. All Rights Reserved.</p>
+        <p><a href="privacypolicy.html">Privacy Policy</a> | <a href="termsandconditions.html">Terms and Conditions</a></p>
+    </footer>
     
     </body>
     <script>
