--- a/support.html
+++ b/support.html
@@ -56,6 +56,10 @@
         </ul>
     </div>
 </body>
+<footer>
+    <p>&copy; 2024 Your Company Name. All Rights Reserved.</p>
+    <p><a href="privacypolicy.html">Privacy Policy</a> | <a href="termsandconditions.html">Terms and Conditions</a></p>
+</footer>
 
 <script>
     function loadNavbar() {
