--- a/testimonials.html
+++ b/testimonials.html
@@ -9,7 +9,7 @@
     <link href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.3/css/all.min.css" rel="stylesheet" />
 </head>
 
-<body>
+<body class="bbody">
     <div id="navbar">
         <object type="text/html" data="header.html" style="width:100%; height:50px;"></object>
     </div>
@@ -46,6 +46,10 @@
         </div>
 
     </div>
+    <footer>
+        <p>&copy; 2024 Your Company Name. All Rights Reserved.</p>
+        <p><a href="privacypolicy.html">Privacy Policy</a> | <a href="termsandconditions.html">Terms and Conditions</a></p>
+    </footer>
 
 </body>
 <script>
