--- a/header.html
+++ b/header.html
@@ -28,10 +28,12 @@
         <a href="about.html" onclick="loadPage('about.html')">About us</a>
         <a href="services.html" onclick="loadPage('services.html')">Services</a>
         <a href="cprofile.html" onclick="loadPage('cprofile.html')">Company profile</a>
-        <a href="#products">Products</a>
+        <!--<a href="#products">Products</a> -->
         <a href="contact.html" onclick="loadPage('contact.html')">Contact Us</a>
         <a href="testimonials.html" onclick="loadPage('testimonials.html')">Testimonials</a>
-        <a href="#blog">Blog</a>
+        <!--<a href="#blog">Blog</a> -->
+        <a href="vision.html" onclick="loadPage('vision.html')">Vision</a>
+        <a href="mission.html" onclick="loadPage('mission.html')">Mission</a>
         <a href="support.html" onclick="loadPage('support.html')">Support</a>
         <a href="careers.html" onclick="loadPage('careers.html')">Careers</a>
     </div>
