--- a/mission.html
+++ b/mission.html
@@ -36,10 +36,10 @@
                     <img src="images/mission.jpg" /> <!-- Update path as needed -->
                     <div class="badge">
                         <i class="fas fa-globe"></i> 
-                        <div>
+                        <!--<div>
                             <span>1000+</span> 
                             <p>Global Clients Served</p>
-                        </div>
+                        </div>-->
                     </div>
                 </div> 
             </div>
