--- a/vision.html
+++ b/vision.html
@@ -39,10 +39,10 @@
                     <img src="images/vision.png" /> <!-- Update path as needed -->
                     <div class="badge">
                         <i class="fas fa-hands-helping"></i> 
-                        <div>
+                        <!--<div>
                             <span>500+</span> 
                             <p>Social Initiatives Launched</p>
-                        </div>
+                        </div>-->
                     </div>
                 </div> 
             </div>
