--- a/about.html
+++ b/about.html
@@ -29,10 +29,10 @@
                         <img src="images/about.jpg" alt="About Us Image" /> <!-- Update path as needed -->
                         <div class="badge">
                             <i class="fas fa-user-plus"></i>
-                            <div>
+                            <!--<div>
                                 <span>1K+</span>
                                 <p>Happy Clients</p>
-                            </div>
+                            </div>-->
                         </div>
                     </div>
                 </div>
@@ -86,7 +86,6 @@
         </div>
     </div>
     <footer>
-        <p>&copy; 2024 Your Company Name. All Rights Reserved.</p>
         <p><a href="privacypolicy.html">Privacy Policy</a> | <a href="termsandconditions.html">Terms and Conditions</a></p>
     </footer>
 
