--- a/header.html
+++ b/header.html
@@ -30,7 +30,7 @@
         <a href="cprofile.html" onclick="loadPage('cprofile.html')">Company profile</a>
         <!--<a href="#products">Products</a> -->
         <a href="contact.html" onclick="loadPage('contact.html')">Contact Us</a>
-        <a href="testimonials.html" onclick="loadPage('testimonials.html')">Testimonials</a>
+        <!--<a href="testimonials.html" onclick="loadPage('testimonials.html')">Testimonials</a>-->
         <!--<a href="#blog">Blog</a> -->
         <a href="vision.html" onclick="loadPage('vision.html')">Vision</a>
         <a href="mission.html" onclick="loadPage('mission.html')">Mission</a>
