--- a/careers.html
+++ b/careers.html
@@ -33,7 +33,7 @@
             </ul>
         </section>
 
-        <section class="job-section">
+        <!--<section class="job-section">
             <h2>Current Open Positions</h2>
 
             <div class="job-listing">
@@ -56,7 +56,7 @@
                 <p><strong>Responsibilities:</strong> Develop and maintain both frontend and backend systems.</p>
                 <a href="#" class="apply-btn">Apply Now</a>
             </div>
-        </section>
+        </section>-->
 
         <section class="testimonials">
             <h2>What Our Team Says</h2>
