--- a/support.html
+++ b/support.html
@@ -51,8 +51,8 @@
         <ul>
             <li><a href="#">User Guides</a></li>
             <li><a href="#">How-to Tutorials</a></li>
-            <li><a href="#">System Setup Instructions</a></li>
-            <li><a href="#">Blog</a></li>
+            <!--<li><a href="#">System Setup Instructions</a></li>-->
+            <!--<li><a href="#">Blog</a></li>-->
         </ul>
     </div>
 </body>
