--- a/about.html
+++ b/about.html
@@ -38,6 +38,7 @@
                 </div>
             </div>
 
+            <div class="box-container">
             <div class="ceo-profile">
                 <img src="images/akhilesh.jpeg" alt="CEO Profile">
                 <div class="ceo-details">
@@ -130,6 +131,7 @@
                         </div>
                     </div>
                 </div>
+            </div>
             </div>
         </div>
     </div>
